# sphere

./: .env.example  .gitignore  ATS_Sphere_design.md  README.md  RESULTS.md  pyproject.toml
data/prompts/: warmup_eval_system_prompt.txt
data/skills/: appworld_skills_ats.json  training_skills.json
deploy/: launch_full.sh  launch_quick_test.sh  selfskill.patch  skill.md
scripts/: ats_pipeline.py  evaluate_appworld.py  evolve_skills.py  train_transition_sft.py
scripts/verl/: ats_outer_loop.py  dataset_ats.py  env_appworld_ats.py  outer_grpo.py  patch_verl_registry.py  reward_manager_ats.py  run_ats_grpo.sh  run_ats_grpo_debug.sh  run_ats_grpo_quick.sh
skill_sphere/: __init__.py
skill_sphere/agent/: __init__.py  alfworld_agent.py  appworld_agent.py  llm_client.py
skill_sphere/diagnostics/: __init__.py  fac.py  feature_extractor.py  sae.py  targeted_synthesis.py
skill_sphere/env/: alfworld_wrapper.py  appworld_server.py  appworld_wrapper.py
skill_sphere/geometry/: __init__.py  excess.py  sphere.py  tangent.py  voronoi.py
skill_sphere/injection/: __init__.py  confidence.py  dynamic_inject.py  intent_tracker.py
skill_sphere/skill_bank/: __init__.py  combination.py  encoder.py  retrieval.py  skill_sphere.py  trainable_sphere.py
